--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <h2>Accesos rápidos</h2>
     <div class="cards">
       <a routerLink="/Cliente" class="card">👥 Clientes</a>
-      <a routerLink="/registrar-cliente" class="card">💼 Empleados</a>
+      <a routerLink="/registrar-cliente" class="card">💼 Registrar clientes</a>
       <a routerLink="/facturas" class="card">🧾 Facturas</a>
     </div>
   </main>
