--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
   </header>
 
   <main class="main">
-    <h2>Accesos rápidos</h2>
-    <div class="cards">
+    <h2 style="text-align: center;" >Accesos rápidos</h2>
+    <div class="cards" style="display: flex; justify-content: space-around;">
       <a routerLink="/Cliente" class="card">👥 Clientes</a>
       <a routerLink="/registrar-cliente" class="card">💼 Registrar clientes</a>
     </div>
