--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,12 @@
  <router-outlet></router-outlet>
 
   <footer class="footer">
-    <p>&copy; 2025 Demo-Facturación. Todos los derechos reservados.</p>
-    <p>Desarrollado por wgarcia</p>
+    <p>Conceptualización de servicios en la nube</p>
+    <p>Unidad 3. Desarrollo de aplicaciones web en los servicios de la nube</p>
+    <p>3.3. Aplicación web con base de datos</p>
+    <p>Rocio Belén Rubio Treviño</p>
+    <p>WERNHER ALEJANDRO CAMPECHANO OLIVARES</p>
+
   </footer>
 
 </div>
