--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
   <header class="header">
-    <h1>🚀 Bienvenido a Demo-Facturación</h1>
-    <p>Tu sistema ágil para gestión de ventas y recursos</p>
+    <h1>🚀 Aplicacion para registro de clientes</h1>
+
   </header>
 
   <main class="main">
